<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_login_screen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <FrameLayout
                    android:id="@+id/ll_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.appnirman.praxis2k16.Utils.SquareImageView
                        android:id="@+id/iv_top"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:layout_marginBottom="20dp"
                        android:gravity="center_horizontal|bottom">

                        <customfonts.MyTextView
                            android:id="@+id/lblName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="name"
                            android:textColor="@color/grey_0"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/lblName"
                            android:gravity="center_vertical"
                            android:background="@drawable/round_corner_shaper"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="10dp"
                            android:padding="10dp"
                            android:textColor="#7f8c8d"
                            android:text="@string/whant_to_know_our_events"
                            android:textSize="13sp" >
                            <com.appnirman.praxis2k16.Utils.SquareImageView
                                android:layout_width="13dp"
                                android:layout_height="13dp"
                                android:layout_marginStart="10dp"
                                android:src="@drawable/search"/>
                        <customfonts.MyTextView
                            android:id="@+id/lblEvent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:background="@drawable/round_corner_shaper"
                            android:textColor="#7f8c8d"
                            android:text="@string/whant_to_know_our_events"
                            android:textSize="13sp" />
                        </LinearLayout>
                    </RelativeLayout>
                </FrameLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/ll_mid"
                    android:layout_below="@+id/ll_top"
                    android:layout_width="match_parent"
                    android:layout_height="260dp">
                </android.support.v7.widget.RecyclerView>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@+id/ll_mid"
                    android:src="@mipmap/ic_launcher" />
            </RelativeLayout>
        </ScrollView>
    </android.support.design.widget.CoordinatorLayout>

    <!--Your FAB implementation-->
    <com.appnirman.praxis2k16.Utils.Fab
    android:id="@+id/fab"
    style="@style/Widget.MaterialSheetFab.Fab"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true" />

    <!-- Overlay that dims the screen -->
    <com.gordonwong.materialsheetfab.DimOverlayFrameLayout
    android:id="@+id/overlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

    Circular reveal container for the sheet
    <io.codetail.widget.RevealLinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="end|bottom"
    android:orientation="vertical">

    <!-- Sheet that contains your items -->
    <android.support.v7.widget.CardView
    android:id="@+id/fab_sheet"
    style="@style/Widget.MaterialSheetFab.Sheet">

    <!-- TODO: Put your sheet items here -->
    <!-- Sheet items -->
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Recording -->
    <customfonts.MyTextView
    android:id="@+id/fab_sheet_item_events"
    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
    android:text="@string/events" />

    <!-- Reminder -->
    <customfonts.MyTextView
    android:id="@+id/fab_sheet_item_messages"
    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
    android:text="@string/messages" />

    <!-- Photo -->
    <customfonts.MyTextView
    android:id="@+id/fab_sheet_item_map"
    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
    android:text="@string/map" />

    <customfonts.MyTextView
    android:id="@+id/fab_sheet_item_notification"
    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
    android:text="@string/notification" />

    <customfonts.MyTextView
    android:id="@+id/fab_sheet_item_sponsors"
    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
    android:text="@string/sponsors" />

    <!-- Reminder -->
    <customfonts.MyTextView
    android:id="@+id/fab_sheet_item_about"
    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
    android:text="@string/about_us" />

    <!-- Photo -->
    <customfonts.MyTextView
    android:id="@+id/fab_sheet_item_settings"
    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
    android:text="@string/settings" />

    <customfonts.MyTextView
    android:id="@+id/fab_sheet_item_feedback"
    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
    android:text="@string/feedback" />

    <customfonts.MyTextView
    android:id="@+id/fab_sheet_item_nearby"
    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
    android:text="@string/nearby" />

    <customfonts.MyTextView
    android:id="@+id/btnLogout"
    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
    android:text="@string/logout" />

    </LinearLayout>


    </android.support.v7.widget.CardView>
    </io.codetail.widget.RevealLinearLayout>


</RelativeLayout>
